# pcl-android-demo

./: README.md
app/: build.gradle
app/src/androidTest/java/com/myntai/pcl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/myntai/pcl/: MainActivity.java
app/src/main/java/com/myntai/pcl/utils/: NativeUtils.java
app/src/main/jni/: CMakeLists.txt  native-jni.cpp
app/src/main/res/values/: strings.xml
app/src/test/java/com/myntai/pcl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
